All Personal Changes Made
*Still need to add images for PosturePal

--- a/src/app/work/projects/simple-portfolio-builder.mdx
+++ b/src/app/work/projects/simple-portfolio-builder.mdx
@@ -1,6 +1,9 @@
 ---
-title: "Simple portfolio creator built with Once UI and Next.js"
-publishedAt: "2024-04-08"
+title: "SafeSphere"
+publishedAt: "2025-01-1"
+summary: "SafeSphere is a scalable, full-stack housing intelligence platform integrating AWS (Lambda, S3, EC2), React, 
+Flask, and Python with Google Maps, Realtor, and Crime APIs, leveraging geospatial analytics, NLP-based affordability scoring, HuggingFace sentiment models, and real-time ETL pipelines to optimize student housing decisions through dynamic, data-driven visualizations."
 images:
-  - "/images/projects/project-01/video-01.mp4"
+  - "/images/projects/p2/ss2.png"
+  - "/images/projects/p2/ss1.svg"
 ---
